--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,5 +4,15 @@
 
 
 .body {
-  background-color: #f7fafc;
+  background-color: #EEE7D3;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width:100vh;
+  min-height: 100vh;
+  padding-bottom: 20px;
 }
